poritt/examples/errors/error-type.ptt
define fix : forall (A : U) -> (A -> A) -> A
           = \ A f -> f
